# polymarket

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: CLAUDE.md  architecture.md  configuration.md  dependencies.md  prd.md  risk-engine.md  setup.md  trading-modes.md
scripts/: bootstrap_oss_stack.sh  dev_down.sh  dev_up.sh  pull_ollama_model.sh  wait_for_services.sh
searxng/: settings.yml
src/polymarket_trader/: __init__.py  cli.py  config.py  orchestrator.py
src/polymarket_trader/backtest/: __init__.py  broker.py  models.py  runner.py
src/polymarket_trader/broker/: __init__.py  base.py  paper.py  polymarket.py
src/polymarket_trader/connectors/: __init__.py  browser.py  clob.py  gamma.py  search.py
src/polymarket_trader/discovery/: __init__.py  scanner.py
src/polymarket_trader/intelligence/: __init__.py  forecaster.py  ranker.py
src/polymarket_trader/models/: __init__.py  broker.py  forecast.py  market.py  research.py  risk.py  run.py  trade.py
src/polymarket_trader/persistence/: __init__.py  store.py
src/polymarket_trader/providers/: __init__.py  base.py  openai_compatible.py  openrouter.py
src/polymarket_trader/research/: __init__.py  pipeline.py
src/polymarket_trader/risk/: engine.py
src/polymarket_trader/runtime/: __init__.py  daytona.py
src/polymarket_trader/strategy/: __init__.py  planner.py  scorer.py
tests/: test_backtest.py  test_config.py  test_daytona_runtime.py  test_models.py  test_paper_broker.py  test_risk.py  test_strategy.py
(+1 files in other folders)
