[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-trader"
version = "0.1.0"
description = "Autonomous Polymarket trading agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.35.0",
    "asyncpg>=0.29.0",
    "click>=8.1.7",
    "sqlalchemy>=2.0.31",
    "aiosqlite>=0.20.0",
    "loguru>=0.7.2",
    "tenacity>=8.5.0",
    "python-dotenv>=1.0.1",
    "anyio>=4.4.0",
    "py-clob-client>=0.18.0",
    "eth-account>=0.12.3",
    "rich>=13.7.1",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.1",
]
daytona = [
    "daytona",
]

[project.scripts]
polymarket = "polymarket_trader.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_trader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
python = "3.11"
